# drf_shoestore

./: db.sqlite3  pyproject.toml
api/: models.py  serializers.py  views.py
api/management/commands/: closepoll.py
api/migrations/: 0001_initial.py  0002_auto_20200930_1758.py
drf_shoestore/: settings.py  urls.py
